# maptools-cli

./: CMakeLists.txt  ChangeLog  README.md  vcpkg.json
.ci/vcpkg/overlay-triplets/: x64-linux-static-all.cmake
.github/workflows/: CI.yml  codeql.yml
cmake/: HardenTargets.cmake  VcpkgInit.cmake
src/: maptools.cpp  maptools_version.cpp  maptools_version.h  pngsave.cpp
